--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
@@ -12,12 +13,14 @@
   </head>
 
   <body>
+
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ErixHub/BootCamp1">View on GitHub</a>
  
           <h1 id="project_title">Erix Bootcamp One</h1>
+          <img src="../images/shattered.jpg">
           <h2 id="project_tagline"></h2>
           
             <section id="downloads">
