Deleted and add images

--- a/pages/dayone.html
+++ b/pages/dayone.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
+
+<center>
 <head>
+  <body background="bg1.jpg">
+  
+   <p><h1 style="background-color:#000000">
+    <font color="gold" face="Monotype Corsiva">It's about making one change in your life, or someone else's, for the better.</font></h1>
+  
+</div>
+
 	<title>This is my first web page</title>
 </head>
-<body>
 
-</body>
-</html>
+ 
+<div><img src="../images/magnetic1d.jpg" width="600" height="300"><img src="../images/fb.jpg" width="32" height="32"></div>
+
+
+<h4><a href=" ../index.html"><font face="Century Gothic">HOME</font></a
+</body>&nbsp;&nbsp; <font face="Century Gothic"> Mission&nbsp;&nbsp;&nbsp;
+About&nbsp;&nbsp;&nbsp; Contact</font>
+ <p>&nbsp;<h4>&nbsp;</html>
+</center>
+
+</body></html>
   
-  	<h3>Understanding Tags
-<a href=http://www.startpage.com> Startpage.com </a>
-  	<ol>
-  		<li>ul    = Unordered List
-        <li>ol    = Order List</li>
-        <li>li    = List Item</li>
-        <li>p     = Paragraph</li>
-	    <li>title = Page Title</li>
-	    <li>head  = Header</i>
-
-</ol>
+  	
 
   		
 
