Added new logo and links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
  <br>
   <br>
-      <h5><a href="pages/dayone.html">Enter Site</a><h5>
+      <h5><a href="pages/magone.html">Enter Site</a><h5>
     </div>   
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
