--- a/pages/magone.html
+++ b/pages/magone.html
@@ -5,7 +5,7 @@
 <head>
   <title>This is my first web page</title>
   
-  <div><img src="../images/Logo.jpg" width="100" height="100">Visit us on <a href="http://www.facebook.com"><img src="../images/fb.jpg" width="32" height="32">
+  <div><img src="../images/Logo.gif" width="150" height="150">Visit us on <a href="http://www.facebook.com"><img src="../images/fb.jpg" width="32" height="32">
     
         </div>
   <link rel="stylesheet" type="text/css" href="../stylesheets/mystylesheet.css">
