Lower-case file rename

--- a/pages/mission.html
+++ b/pages/mission.html
@@ -5,24 +5,28 @@
 	<head>
   <title>This is my first web page</title>
 
-  <div><img src="../images/Logo.jpg" width="150" height="150">Visit us on <a href="http://www.facebook.com"><img src="../images/fb.jpg" width="32" height="32">
-        </div>
+  <div><img src="../images/logo.jpg" width="150" height="150">Visit us on <a href="http://www.facebook.com" target="_blank"><img src="../images/fb.jpg" width="32" height="32">
+    </div>
   <link rel="stylesheet" type="text/css" href="../stylesheets/mystylesheet.css">
   <p><a href=" ../index.html"><font face="Century Gothic">HOME</a>
-    <a href=" ../pages/magone.html"><font face="Century Gothic">Start</a>
+        <a href=" ../pages/magone.html"><font face="Century Gothic">Start</a>
+        <a href=" ../pages/mission.html"><font face="Century Gothic">Mission</a>
+    <a href=" ../pages/contact.html"><font face="Century Gothic">Contact</a>
     <a>Shop</a>
-    <a>About</a>
-    <a>Contact</a></p>
+    <a>About</a></p>
     <hr>
-    <p><font color="black" face="Monotype Corsiva">Make one change in your life for the better.</p>
+    <p><b><font color="black" face="Monotype Corsiva">Make one change in your life for the better.</p></b>
     <br>
 	
 </head>
     <body>
         
         
-        <font color="black" face="Monotype Corsiva">
- 
-       <p>Magnetic One...</p>
+        <font color="black" face="arial">
+      <div class=colorred>
+       <p><b>Where does the the term Magnetic One come from?</p></b>
+       <textarea rows="4" cols="80" wrap="hard">On the 13-Moon calendar there are thirteen 28 day months. The first month is named "Magnetic". The "One" represents the 1st of that month. On a typical calendar July 26 is that same day as Magnetic 1st. This date is particularly special to me as it is my birthday; (July 26, 1966). </textarea>
+     </div>
+
     </body>
 </html>
