--- a/pages/magone.html
+++ b/pages/magone.html
@@ -19,6 +19,7 @@
         <a href=" ../pages/magone.html"><font face="Century Gothic">Start</a></font>
         <a href=" ../pages/mission.html"><font face="Century Gothic">Mission</a></font>
     <a href=" ../pages/contact.html"><font face="Century Gothic">Contact</a></font>
+    <a href=" ../pages/daysix.html"><font face="Century Gothic">Multi-Col</a></font>
     <a>Shop</a>
     <a>About</a>
     <i>Visit us on <a href="http://www.facebook.com" target="_blank"><img src="../images/fb.jpg" width="32" height="32"></a></i>
@@ -65,21 +66,21 @@
             <thead>
                 <tr>
                 <th>First</th>
-                <th>Second</th>
+                <th>Last</th>
               </tr>
             </thead>
           </tbody>
                   <tr>
-                    <td>Bike!</td>
-                    <td>Skate!</td>
+                    <td>Up</td>
+                    <td>Down</td>
                   </tr>
                   <tr>
-                    <td>Hello!</td>
-                    <td>later!</td>
+                    <td>Left</td>
+                    <td>Right</td>
                   </tr>
                   <tr>
-                    <td>Stop!</td>
-                    <td>Go!</td>
+                    <td>Stop</td>
+                    <td>Go</td>
                   </tr>
           
         <table id="best">
