--- a/pages/mission.html
+++ b/pages/mission.html
@@ -11,14 +11,15 @@
   
   <div><img src="../images/logo.jpg" width="150" height="150"> 
     </div>
-  <link rel="stylesheet" type="text/css" href="../stylesheets/mystylesheet.css">
-      <p><a href=" ../index.html"><font face="Century Gothic">HOME</a></font>
+  <nav><a href=" ../index.html"><font face="Century Gothic">HOME</a></font>
         <a href=" ../pages/magone.html"><font face="Century Gothic">Start</a></font>
         <a href=" ../pages/mission.html"><font face="Century Gothic">Mission</a></font>
     <a href=" ../pages/contact.html"><font face="Century Gothic">Contact</a></font>
+    <a href=" ../pages/daysix.html"><font face="Century Gothic">Multi-Col</a></font>
     <a>Shop</a>
     <a>About</a>
-    <i>Visit us on <a href="http://www.facebook.com" target="_blank"><img src="../images/fb.jpg" width="32" height="32"></a></i></p>
+    <i>Visit us on <a href="http://www.facebook.com" target="_blank"><img src="../images/fb.jpg" width="32" height="32"></a></i>
+      </nav>
     
     <hr>
     <p><stong><font color="black" face="Monotype Corsiva">Make one change in your life for the better.</p></strong></font>
