Added sprite sheets

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -11,6 +11,8 @@
 			</ul>
 		</nav>
 	</aside>
+	<div id="section">
+		<header><div id="title"><h3>Feedback...</h3></div></header>
 	<div id="form"><a>We appreciate your feedback!</a>
 <form action="../pages/results.html" method="post">
 				<fieldset>
@@ -36,6 +38,6 @@
 					<input type="email" name="Email" id="email">
 					<br>
 					<input type="submit" value="Submit">
-				</form></div></fieldset>
+				</form></div></fieldset></div>
 </body>
 </html>
