--- a/pages/ssindex.html
+++ b/pages/ssindex.html
@@ -3,28 +3,26 @@
 <head>
 	<title>Eric Anderson's Project</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/solarsystemstylesheet.css">
-	
 </head>
 <body>
-	
 	<aside>
 		<img src="../images/solarsystem.jpg" width="100" height="100">
  <class id="aside">
-		<nav id="navigate">
+		<nav id="linkbar">
 			<ul>
-				<li><a title="HOME" href="../pages/ssindex.html">HOME </li></a><br>
-				<li><a title="Sun" href="../pages/sun.html">Sun </li></a><br>
-				<li><a title="Mercury" href="../pages/mercury.html">Mercury </li></a><br>
-				<li><a title="Venus" href="../pages/venus.html">Venus </li></a><br>
-				<li><a title="Earth" href="../pages/earth.html">Earth </li></a><br>
-				<li><a title="Mars" href="../pages/mars.html">Mars </li></a><br>
-				<li><a title="Jupiter" href="../pages/jupiter.html">Jupiter </li></a><br>
-				<li><a title="Saturn" href="../pages/saturn.html">Saturn </li></a><br>
-				<li><a title="Uranus" href="../pages/uranus.html">Uranus </li></a><br>
-				<li><a title="Neptune" href="../pages/neptune.html">Neptune </li></a><br>
-				<li><a title="Pluto" href="../pages/pluto.html">Pluto </li></a><br>
-				<li><a title="Feedback" href="../pages/feedback.html">Feedback </li></a><br>
-				<li><a title="" href="../pages/results.html">... </li></a>
+				<li id="home"><a title="HOME" href="../pages/ssindex.html"></li></a><br>
+				<li id="sun"><a title="Sun" href="../pages/sun.html"></li></a><br>
+				<li id="mercury"><a title="Mercury" href="../pages/mercury.html"></li></a><br>
+				<li id="venus"><a title="Venus" href="../pages/venus.html"></li></a><br>
+				<li id="earth"><a title="Earth" href="../pages/earth.html"></li></a><br>
+				<li id="mars"><a title="Mars" href="../pages/mars.html"></li></a><br>
+				<li id="jupiter"><a title="Jupiter" href="../pages/jupiter.html"></li></a><br>
+				<li id="saturn"><a title="Saturn" href="../pages/saturn.html"></li></a><br>
+				<li id="uranus"><a title="Uranus" href="../pages/uranus.html"></li></a><br>
+				<li id="neptune"><a title="Neptune" href="../pages/neptune.html"></li></a><br>
+				<li id="pluto"><a title="Pluto" href="../pages/pluto.html"></li></a><br>
+				<li id="feedback"><a title="Feedback" href="../pages/feedback.html"></li></a>
+				<li id="..."><a title="" href="../pages/results.html">... </li></a>
 			</ul>
 		</nav>
 	</aside>
@@ -36,25 +34,18 @@ The Solar System is the Sun and the objects that orbit the Sun. These are a plan
 The Solar System also contains regions populated by smaller objects. The asteroid belt, which lies between Mars and Jupiter, mostly contains objects composed, like the terrestrial planets, of rock and metal. Beyond Neptune's orbit lie the Kuiper belt and scattered disc, linked populations of trans-Neptunian objects composed mostly of ices. Within these populations are several dozen to more than ten thousand objects that may be large enough to have been rounded by their own gravity. Such objects are referred to as dwarf planets. Identified dwarf planets include the asteroid Ceres and the trans-Neptunian objects Pluto and Eris. In addition to these two regions, various other small-body populations including comets, centaurs and interplanetary dust freely travel between regions. Six of the planets, at least three of the dwarf planets, and many of the smaller bodies are orbited by natural satellites,[d] usually termed "moons" after Earth's Moon. Each of the outer planets is encircled by planetary rings of dust and other small objects.<br>
 The solar wind, a flow of plasma from the Sun, creates a bubble in the interstellar medium known as the heliosphere, which extends out to the edge of the scattered disc. The Oort cloud, which is believed to be the source for long-period comets, may also exist at a distance roughly a thousand times further than the heliosphere. The heliopause is the point at which pressure from the solar wind is equal to the opposing pressure of interstellar wind. The Solar System is located within one of the outer arms of the Milky Way, which contains about 200 billion stars.</p></div>
 <br>
-				
-					<div id="article1">
-						<p></p>
-					</div id"article1">
-						<div id="article2">
-							<p></p>
-						</div>
-							<div id="article3">
-								<p></p>
-							</div>
-				
+<hr>
+<p><h3>Click below for related topics.</h3></p>
+			<ul id="navlist">
+  				<li id="astro"><a title="Astroids" href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Asteroids"target="_blank"></a></li>
+  				<li id="comet"><a title="Comets" href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Comets"target="_blank"></a></li>
+  				<li id="moon"><a title="Moons" href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Moon" target="_blank"></a></li>
+			</ul>
+			<p><h5>You will be directed to nasa.gov.</h5></p>
+<br>
 		<div id="footer"><hr>
 			<p><h6>This site is being developed by Eric D. Anderson<li><a title="Feedback" href="../pages/feedback.html">Feedback </li></a><p><br></h6>
-
 		</div>
 		</section>
-		
-			
-			
 </body>
-		
 </html>
