--- a/pages/animate_form_index.html
+++ b/pages/animate_form_index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Sprite Sample SheetSprite Example</title>
-	<link href="css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="animate_form_style.css">
 		</head>
 		<body>
 
