Adjusted background image

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<aside>
-		<img src="../images/earth.jpg" width="100" height="100">
+		<img src="../images/earth.jpg" width="120" height="120">
  <class id="aside">
 		<nav id="linkbar">
 			<ul>
@@ -30,7 +30,7 @@
 		<section id="section">
 			<header><div id="title"><h3>E a r t h</h3></header></div>
 			<div id="content"><p><b>From Wikipedia, the free encyclopedia</b><br><hr>
-Earth is the third planet from the Sun. It is the densest and fifth-largest of the eight planets in the Solar System. It is also the largest of the Solar System's four terrestrial planets. It is sometimes referred to as the world or the Blue Planet.<br>
+<b><i>Earth is the third planet from the Sun. It is the densest and fifth-largest of the eight planets in the Solar System. It is also the largest of the Solar System's four terrestrial planets. It is sometimes referred to as the world or the Blue Planet.<br>
 Earth formed approximately 4.54 billion years ago, and life appeared on its surface within its first billion years. Earth's biosphere then significantly altered the atmospheric and other basic physical conditions, which enabled the proliferation of organisms as well as the formation of the ozone layer, which together with Earth's magnetic field blocked harmful solar radiation, and permitted formerly ocean-confined life to move safely to land. The physical properties of the Earth, as well as its geological history and orbit, have allowed life to persist.<br>
 Earth's lithosphere is divided into several rigid segments, or tectonic plates, that migrate across the surface over periods of many millions of years. Over 70% percent of Earth's surface is covered with water, with the remainder consisting of continents and islands which together have many lakes and other sources of water that contribute to the hydrosphere. Earth's poles are mostly covered with ice that is the solid ice of the Antarctic ice sheet and the sea ice that is the polar ice packs. The planet's interior remains active, with a solid iron inner core, a liquid outer core that generates the magnetic field, and a thick layer of relatively solid mantle.<br>
 Earth gravitationally interacts with other objects in space, especially the Sun and the Moon. During one orbit around the Sun, the Earth rotates about its own axis 366.26 times, creating 365.26 solar days, or one sidereal year.[note 6] The Earth's axis of rotation is tilted 23.4° away from the perpendicular of its orbital plane, producing seasonal variations on the planet's surface with a period of one tropical year (365.24 solar days). The Moon is Earth's only natural satellite. It began orbiting the Earth about 4.53 billion years ago (bya). The Moon's gravitational interaction with Earth stimulates ocean tides, stabilizes the axial tilt, and gradually slows the planet's rotation.<br>
