--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<aside>
-		<img src="../images/pluto.gif" width="100" height="100">
+		<img src="../images/pluto.gif" width="120" height="120">
  <class id="aside">
 		<nav id="linkbar">
 			<ul>
@@ -31,7 +31,7 @@
 		<section id="section">
 			<header><div id="title"><h3>P l u t o</h3></header></div>
 			<div id="content"><p><b>From Wikipedia, the free encyclopedia</b><br><hr>
-Pluto (minor-planet designation 134340 Pluto) is the largest object in the Kuiper belt, and the tenth-most-massive body observed directly orbiting the Sun. It is the second-most-massive known dwarf planet, after Eris. Like other Kuiper-belt objects, Pluto is composed primarily of rock and ice[15] and is relatively small, approximately one-sixth the mass of the Moon and one-third its volume. It has an eccentric and highly inclined orbit that takes it from 30 to 49 AU (4.4–7.4 billion km) from the Sun. This causes Pluto to periodically come closer to the Sun than Neptune. As of 2014, it is 32.6 AU from the Sun.<br>
+<b><i>Pluto (minor-planet designation 134340 Pluto) is the largest object in the Kuiper belt, and the tenth-most-massive body observed directly orbiting the Sun. It is the second-most-massive known dwarf planet, after Eris. Like other Kuiper-belt objects, Pluto is composed primarily of rock and ice[15] and is relatively small, approximately one-sixth the mass of the Moon and one-third its volume. It has an eccentric and highly inclined orbit that takes it from 30 to 49 AU (4.4–7.4 billion km) from the Sun. This causes Pluto to periodically come closer to the Sun than Neptune. As of 2014, it is 32.6 AU from the Sun.<br>
 Discovered in 1930, Pluto was originally classified as the ninth planet from the Sun. Its status as a major planet fell into question following further study of it and the outer Solar System over the ensuing 75 years. Starting in 1977 with discovery of minor planet 2060 Chiron, numerous icy objects similar to Pluto with eccentric orbits were found.[16] The most notable of these was the scattered disc object Eris, discovered in 2005, which is 27% more massive than Pluto.[17] The understanding that Pluto is only one of several large icy bodies in the outer Solar System prompted the International Astronomical Union (IAU) to formally define what it means to be a "planet" in 2006. This definition excluded Pluto and reclassified it as a member of the new "dwarf planet" category (and specifically as a plutoid).[18] Some scientists hold that Pluto should have remained classified as a planet, and that other dwarf planets should be added to the roster of planets along with Pluto.<br>
 Pluto has five known moons: Charon (the largest, with a diameter just over half that of Pluto), Nix, Hydra, Kerberos, and Styx. Pluto and Charon are sometimes described as a binary system because the barycenter of their orbits does not lie within either body.[22] The IAU has yet to formalise a definition for binary dwarf planets, and Charon is officially classified as a moon of Pluto.[23]
 In 2015, the Pluto system is due to be visited by spacecraft for the first time. The New Horizons probe will perform a flyby during which it will attempt to take detailed measurements and images of the plutoid and its moons.</p></div>
