--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<aside>
-		<img src="../images/uranus.jpg" width="100" height="100">
+		<img src="../images/uranus.jpg" width="120" height="120">
  <class id="aside">
 		<nav id="linkbar">
 			<ul>
@@ -30,7 +30,7 @@
 		<section id="section">
 			<header><div id="title"><h3>U r a n u s</h3></header></div>
 			<div id="content"><p><b>From Wikipedia, the free encyclopedia</b><br><hr>
-Uranus is the seventh planet from the Sun. It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. Uranus is similar in composition to Neptune, and both are of different chemical composition than the larger gas giants Jupiter and Saturn. For this reason, astronomers sometimes place them in a separate category called "ice giants". Uranus's atmosphere, although similar to Jupiter's and Saturn's in its primary composition of hydrogen and helium, contains more "ices" such as water, ammonia, and methane, along with traces of hydrocarbons.[12] It is the coldest planetary atmosphere in the Solar System, with a minimum temperature of 49 K (−224.2 °C), and has a complex, layered cloud structure, with water thought to make up the lowest clouds, and methane the uppermost layer of clouds.[12] In contrast, the interior of Uranus is mainly composed of ices and rock.<br>
+<b><i>Uranus is the seventh planet from the Sun. It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. Uranus is similar in composition to Neptune, and both are of different chemical composition than the larger gas giants Jupiter and Saturn. For this reason, astronomers sometimes place them in a separate category called "ice giants". Uranus's atmosphere, although similar to Jupiter's and Saturn's in its primary composition of hydrogen and helium, contains more "ices" such as water, ammonia, and methane, along with traces of hydrocarbons.[12] It is the coldest planetary atmosphere in the Solar System, with a minimum temperature of 49 K (−224.2 °C), and has a complex, layered cloud structure, with water thought to make up the lowest clouds, and methane the uppermost layer of clouds.[12] In contrast, the interior of Uranus is mainly composed of ices and rock.<br>
 It is the only planet whose name is derived from a figure from Greek mythology rather than Roman mythology like the other planets, from the Latinized version of the Greek god of the sky, Ouranos. Like the other giant planets, Uranus has a ring system, a magnetosphere, and numerous moons. The Uranian system has a unique configuration among those of the planets because its axis of rotation is tilted sideways, nearly into the plane of its revolution about the Sun. Its north and south poles therefore lie where most other planets have their equators.[16] In 1986, images from Voyager 2 showed Uranus as a virtually featureless planet in visible light without the cloud bands or storms associated with the other giants.[16] Terrestrial observers have seen signs of seasonal change and increased weather activity in recent years as Uranus approached its equinox. The wind speeds on Uranus can reach 250 meters per second (900 km/h, 560 mph).</p></div>
 <br>
 <hr>
