Added animated banner page

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 	<title>Feedback</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/solarsystemstylesheet.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/banner.css">
 </head>
 <body>
+	
 	<class id="aside">
 		<nav id="navigate">
 			<ul>
@@ -12,10 +13,10 @@
 		</nav>
 	</aside>
 	<div id="section">
-		<header><div id="title"><h3>Feedback...</h3></div></header>
+		<header><div id="title"><h2>Thank-you!</h2></div></header>
 	<div id="form"><a>We appreciate your feedback!</a>
 <form action="../pages/results.html" method="post">
-				<fieldset>
+				<fieldset><h3>
 					<label>Was this information helpful?</label>
 					<br>
 					Yes<input type="radio" name="helpful" value="Yes">
@@ -38,6 +39,30 @@
 					<input type="email" name="Email" id="email">
 					<br>
 					<input type="submit" value="Submit">
-				</form></div></fieldset></div>
+				</form></div></fieldset><h3></div>
+	<div id="container">
+    <header>
+        <h2>Planets of Our Solar System</h2>
+        
+                <a href="../pages/ssindex.html"><img src="../images/start.jpg" width="70" height="70"></a>
+    </header>
+     
+    <!-- Each image is 350px by 233px -->
+    <div class="photobanner">
+        <img class="first" src="../images/image1.jpg" alt="">
+        <img src="../images/image2.jpg" alt="">
+        <img src="../images/image3.jpg" alt="">
+        <img src="../images/image4.jpg" alt="">
+        <img src="../images/image5.jpg" alt="">
+        <img src="../images/image6.jpg" alt="">
+        <img src="../images/image1.jpg" alt="">
+        <img src="../images/image2.jpg" alt="">
+        <img src="../images/image3.jpg" alt="">
+        <img src="../images/image4.jpg" alt="">
+
+            </ul>
+    </div>
+
+</div>
 </body>
 </html>
