--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
     
  <br>
   <br>
-      <h5><a href="../pages/references.html">Enter Site</a><h5>
+      <h5><a href="../pages/banner.html">Enter Site</a><h5>
     </div>   
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
