--- a/pages/ssindex.html
+++ b/pages/ssindex.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<aside>
-		<img src="../images/solarsystem.jpg" width="120" height="120">
+		<a href="../pages/banner.html"><img src="../images/solarsystem.jpg" width="120" height="120"></a>
  <class id="aside">
 		<nav id="linkbar">
 			<ul>
